<resources>
    <string name="app_name">点餐</string>
    <string name="cant">不能打开串口设备</string>
    <string name="usb_dis">USB设备断开连接</string>
    <string name="dont_usb">USB没有连接串口设备</string>
    <string name="no_usb_avalible">没有USB串口可用</string>
    <string name="mark">€</string>
    <string name="go_caclu">去结算</string>
    <string name="cart_empty">购物车为空</string>
    <string name="clear_shop_cart">清空购物车</string>
    <string name="title_check">请核对您的订单</string>
    <string name="go_pay">去支付</string>
    <string name="title_submit">提交订单</string>
    <string name="title_main">商品选择</string>
    <string name="back">返回</string>
    <string name="submit_coin">请投币</string>
    <string name="submit_coin_down">请在下方投币</string>
    <string name="confirm">确认</string>
    <string name="print_order">订单打印</string>
    <string name="printting">机器正在打印订单，请勿离开</string>
    <string name="welcome">欢迎光临</string>
    <string name="welcome_to_this">欢迎光临</string>
    <string name="please_take_repay">请取回机器找零</string>
    <string name="on_return_main">正在返回主页</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="msg_no_net">网络无连接</string>
    <string name="ble_state_cloes">蓝牙被关闭请打开...</string>
    <string name="disconnect_printer">未连接蓝牙打印机</string>
    <string name="close_blue">系统蓝牙已关闭,点击开启</string>
    <string name="search_bluetooth">点击后搜索蓝牙打印机</string>
    <string name="connected">已连接</string>
    <string name="unkonw_device">未知设备</string>
    <string name="search_device">正在搜索蓝牙设备…</string>
    <string name="search_ok">搜索完成</string>
    <string name="re_search">点击重新搜索</string>
    <string name="pairring">正在配对......</string>
    <string name="paired">已配对</string>
    <string name="un_pair">未配对</string>
    <string name="bind">绑定</string>
    <string name="click_bind_device">点击确认绑定蓝牙设备</string>
    <string name="cancel">取消</string>
    <string name="confirm_ok">确认</string>
    <string name="bind_fail">蓝牙绑定失败,请重试</string>
    <string name="unkonw_address">未知地址</string>
    <string name="ip_tip">服务器IP:</string>
    <string name="port_tip">端口:</string>
    <string name="ip_seting">服务器IP地址设置</string>
    <string name="ip_example">127.1.1.1</string>
    <string name="ip_unvalid">请输入正确的IP地址</string>
    <string name="port_unvalid">请输入0到65535的整数</string>
    <string name="port_example">3445</string>
    <string name="chu_bi_shi_bai">用户投币失败</string>
    <string name="have_click">正在收款状态，请不要重复点击</string>
    <string name="last_is_no_ok">之前投币失败，请稍后再试</string>
    <string name="order_id_data">订单号：</string>
    <string name="order_state">订单状态: 已下单</string>
    <string name="prodcut">产品</string>
    <string name="product_dan_jia">数量*单价</string>
    <string name="count">金额</string>
    <string name="jian_shu">购买件数：</string>
    <string name="ying_fu">应付金额：</string>
    <string name="shi_shou_jin_e">实收金额：</string>
    <string name="zhao_ling">找零：</string>
    <string name="xie_xie_again">谢谢惠顾，欢迎再次光临！</string>
    <string name="setting">设置</string>
    <string name="refresh">刷新</string>
    <string name="tip">提示</string>
    <string name="quit">确定需要取消此订单？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="pay_count_number_view">需要支付金额：</string>
    <string name="ying_shou_view">已支付金额：</string>
    <string name="gou_wu_che_is_empty">当前购物车为空，不能去结算</string>
    <string name="click_on_submit">设备已就绪</string>
</resources>
