<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:centerText="@string/submit_coin"
        app:centerType="textView"
        app:leftDrawable="@drawable/comm_titlebar_back_normal"
        app:leftDrawablePadding="0dp"
        app:leftText="@string/back"
        app:leftType="textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:drawableTop="@drawable/img_case_coin"
        android:drawablePadding="10dp"
        android:text="@string/submit_coin_down" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/submit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/shape_go_pay"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="#480024" />

</LinearLayout>
