<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:centerText="@string/title_submit"
        app:centerType="textView"
        app:leftDrawablePadding="0dp"
        app:leftText=""
        app:leftType="textView" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="400px"
        android:layout_marginRight="400px"
        android:layout_weight="1"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/title_check"
                android:textColor="#333333" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/goods_recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="400px"
        android:layout_marginTop="20dp"
        android:layout_marginRight="400px"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_go_pay_cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#480024" />

        <Button
            android:id="@+id/submit_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:background="@drawable/shape_go_pay"
            android:gravity="center"
            android:text="@string/go_pay"
            android:textColor="#480024" />

    </LinearLayout>


</LinearLayout>
